--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 		<meta charset="utf-8" />
-    <title>Leaflet example in one file</title>
+    <title>Map of Geodata IT - St. Louis, MO</title>
 
 		<link rel="stylesheet" crossorigin=""
 				href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
